--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
+    "fs-extra": "^9.1.0",
     "jsdom": "^16.4.0",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
     "@types/dotenv": "^8.2.0",
+    "@types/fs-extra": "^9.0.6",
     "@types/jsdom": "^16.2.5",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
