--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     },
     "removeComments": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
