chore: update deps and init eslint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "ts-node-dev --respawn -r tsconfig-paths/register ./crawler/index.ts",
     "build": "tsc",
-    "lint": "eslint 'crawler/**/*.ts'",
+    "lint": "eslint --ext .ts crawler/",
     "lint:fix": "eslint 'crawler/**/*.ts' --fix"
   },
   "author": "dvaJi",
@@ -25,13 +25,13 @@
     "@types/cheerio": "^0.22.23",
     "@types/dotenv": "^8.2.0",
     "@types/fs-extra": "^9.0.6",
-    "@types/jsdom": "^16.2.5",
-    "@types/node-fetch": "^2.5.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "@types/jsdom": "^16.2.6",
+    "@types/node-fetch": "^2.5.8",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0"
